--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,13 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
+    "core-decorators": "^0.20.0",
     "expo": "^32.0.0",
+    "polished": "^3.1.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-elements": "^1.1.0",
+    "react-native-phone-input": "^0.2.1",
     "react-navigation": "^3.0.9"
   },
   "devDependencies": {
