--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,12 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-elements": "^1.1.0",
+    "react-native-modal": "^9.0.0",
     "react-native-phone-input": "^0.2.1",
     "react-native-progress-circle": "^2.0.1",
     "react-native-simple-picker": "^3.1.1",
+    "react-native-progress": "^3.6.0",
+    "react-native-slider": "^0.11.0",
     "react-navigation": "^3.0.9"
   },
   "devDependencies": {
